adjustment in rwh line

--- a/Backtesting.ipynb
+++ b/Backtesting.ipynb
@@ -29,7 +29,7 @@
    "id": "206a30af",
    "metadata": {},
    "source": [
-    "## Retrieving Index Level Data\n",
+    "## Retrieving Stock Price Data\n",
     "Remember from the [`Financial Data`](https://github.com/LucianoBritis/Python-for-Finance/blob/main/Financial%20Data.ipynb), how we retrieve **get_data_yahoo**. Now, we work with Adobe, Inc. stock prices."
    ]
   },
@@ -701,6 +701,10 @@
    "metadata": {},
    "source": [
     "### Random Walk Hypothesis\n",
+    " - The RWH postulates that prices in financial markets follow a random walk, or, in continuous time, an arithmetic Brownian notion without drift.\n",
+    " - The expected value of an arithmetic Brownian motion without drift at any point in the future equals its value today.\n",
+    " - As a consequence, the best predictor for tomorrow’s price, in a least-squares sense, is today’s price if the RWH applies.\n",
+    " - The RWH can be tested for a specific case as follows. A financial time series of historical market prices is used for which a number of lagged versions are created—say, five. OLS regression is then used to predict the market prices based on the lagged market prices created before.\n",
     " - The basic idea is that the market prices from yesterday and four more days back can be used to predict today’s market price. "
    ]
   },
@@ -851,8 +855,10 @@
    "source": [
     "##  Linear OLS Regression\n",
     "\n",
-    " - applies linear OLS regression to predict the direction of market move‐ments based on historical log returns.\n",
-    " - To keep things simple, only two features are used. The first feature (lag_1) represents the log returns of the financial time series lagged by one day. The second feature (lag_2) lags the log returns by two days."
+    " - Applying linear OLS regression to predict the direction of market move‐ments based on historical log returns.\n",
+    " - To keep things simple, only two features are used. \n",
+    " - The first feature (lag_1) represents the log returns of the financial time series lagged by one day. \n",
+    " - The second feature (lag_2) lags the log returns by two days."
    ]
   },
   {
@@ -882,6 +888,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# clear column names\n",
     "df.columns = [i.replace('=','') for i in df.columns]"
    ]
   },
@@ -892,6 +899,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# selecting a specific symbol from the dataframe\n",
     "symbol = 'EUR'\n",
     "data = pd.DataFrame(df[symbol])"
    ]
@@ -903,6 +911,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# vectorized calculation of log returns\n",
     "data['returns'] = np.log(data /data.shift(1))\n",
     "data.dropna(inplace=True)"
    ]
@@ -914,6 +923,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# vectorized evaluation of the trading signal generation\n",
     "data['direction'] = np.sign(data.returns).astype(int)"
    ]
   },
@@ -1008,6 +1018,7 @@
     }
    ],
    "source": [
+    "# the log returns can then be visualized via a **histogram**.\n",
     "data.returns.hist(bins=35, figsize=(10,6));"
    ]
   },
@@ -1016,8 +1027,7 @@
    "id": "72319f6d",
    "metadata": {},
    "source": [
-    "create the features data by lagging the log returns and visual‐\n",
-    "izes it in combination with the returns data. "
+    "Create the features data by lagging the log returns and visualizes it in combination with the returns data. "
    ]
   },
   {
@@ -1152,7 +1162,8 @@
     }
    ],
    "source": [
-    "data.head()"
+    "# first five rows of single column\n",
+    "data.head() "
    ]
   },
   {
@@ -1585,7 +1596,7 @@
     }
    ],
    "source": [
-    "data[['returns','strat_ols_1','strat_ols_2']].sum().apply(np.exp).head().to_frame(name=\"totals\")"
+    "data[['returns','strat_ols_1','strat_ols_2']].sum().apply(np.exp).to_frame(name=\"totals\")"
    ]
   },
   {
