--- a/Indicators/1 Momentum/1.4 Stochastic Oscillator.ipynb
+++ b/Indicators/1 Momentum/1.4 Stochastic Oscillator.ipynb
@@ -4793,6 +4793,15 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "31efa5bb",
+   "metadata": {},
+   "source": [
+    "![1 4 Stochastic Oscillator](https://user-images.githubusercontent.com/13219648/229384621-b8836352-2583-4529-b64e-a7a2da1c56b5.png)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "c0bdf704",
    "metadata": {},
